display blog's contents on invenietis website

--- a/InvenietisPortal/Views/Home/Admin.cshtml
+++ b/InvenietisPortal/Views/Home/Admin.cshtml
@@ -1,5 +1,56 @@
-﻿@{
-    ViewBag.Title = "Blog Administrator";
+﻿@model Invenietis.Blog.BlogContext
+@{
+    Layout = "~/Views/Shared/_Layout.fr.cshtml";
+    ViewBag.Title = "Gestion des articles";
+    ViewBag.Keywords = "";
+    ViewBag.Description = "";
 }
 
-<h2>BlogAdmin</h2>
+
+<h2>Gestion des articles</h2>
+
+<div class="row-fluid">
+            <div class="span12">
+                <header class="landing-header top-bx backphoto">
+                    <div class="container">
+                        <div class="row-fluid">
+                            <div class="span12">
+                                <h1 class="htitle">Gestion des articles</h1>
+                            </div>
+                            <div class="text">
+                                <p>
+                                    @{var m = new Invenietis.Blog.BlogContext();
+                                        var s = m.CreateBlogSource();
+                                     s.CreateBlog( new Uri( "http://macdarwin.github.com/atom.xml" ) );
+                                     var s2 = m.CreateBlogSource();
+                                     s2.CreateBlog( new Uri("http://cedricdotnet.blogspot.com/feeds/posts/default") );
+                                    }
+                                    Blog de @s.AuthorName;
+                                    Articles :
+                                    @{var refresh = new Invenietis.Blog.BlogRefreshResult();
+                                      refresh = @s.RefreshFromUri( new Uri( "http://macdarwin.github.com/atom.xml" ) );
+                                    }
+                                    @foreach( var article in s.Articles )
+                                    {
+                                      <br />
+                                        @article.OriginalTitle     
+                                    }
+                                    <br />
+                                    Blog de @s2.AuthorName;
+                                    @{
+                                        refresh = @s2.RefreshFromUri( new Uri( "http://cedricdotnet.blogspot.com/feeds/posts/default" ) );
+                                    }
+                                    @foreach( var a in s2.Articles )
+                                    {
+                                      <br />
+                                        @a.OriginalTitle     
+                                    }
+                                                                       
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </header>
+            </div>
+</div>
+
