--- a/InvenietisPortal/Views/Home/Blog.fr.cshtml
+++ b/InvenietisPortal/Views/Home/Blog.fr.cshtml
@@ -17,43 +17,34 @@
                             <div class="span12">
                                 <h1 class="htitle">Invenietis Blog</h1>
                             </div>
-                            <div class="text">
-                                <p>
-                                    @{var m = new Invenietis.Blog.BlogContext();
-                                        var s = m.CreateBlogSource();
-                                     s.CreateBlog( new Uri( "http://macdarwin.github.com/atom.xml" ) );
-                                     var s2 = m.CreateBlogSource();
-                                     s2.CreateBlog( new Uri("http://cedricdotnet.blogspot.com/feeds/posts/default") );
-                                    }
-                                    Blog de @s.AuthorName;
-                                    Articles :
-                                    @{var refresh = new Invenietis.Blog.BlogRefreshResult();
-                                      refresh = @s.RefreshFromUri( new Uri( "http://macdarwin.github.com/atom.xml" ) );
-                                    }
-                                    @foreach( var article in s.Articles )
-                                    {
-                                      <br />
-                                        @article.OriginalTitle     
-                                    }
-                                    <br />
-                                    Blog de @s2.AuthorName;
-                                    @{
-                                        refresh = @s2.RefreshFromUri( new Uri( "http://cedricdotnet.blogspot.com/feeds/posts/default" ) );
-                                    }
-                                    @foreach( var a in s2.Articles )
-                                    {
-                                      <br />
-                                        @a.OriginalTitle     
-                                    }
-
-
-
-                                    
-                                </p>
-                            </div>
                         </div>
                     </div>
                 </header>
             </div>
 </div>
+<div class="row-fluid">
+            <div class="span12 orange double-bx">
+                <section class="container">
+                    <div class="row-fluid">
+
+                         <p>
+                                    @{var m = new Invenietis.Blog.BlogContext();
+                                        var s = m.CreateBlogSource();
+                                     s.CreateBlog( new Uri( "http://macdarwin.github.com/atom.xml" ) );
+                                     }
+                                     @foreach( var article in s.Articles )
+                                    {
+                                        var status = article.Status;
+                                         if(status == Invenietis.Blog.BlogArticleStatus.Published)
+                                          {
+                                              article.PublishedInfo.TitleFR = "new title";
+                                             @article.PublishedInfo.TitleFR
+                                          }
+                                         
+                                     }
+                                    </p>
+                    </div>
+                </section>
+            </div>
+        </div>
 
