--- a/InvenietisPortal/Views/Shared/_Layout.cshtml
+++ b/InvenietisPortal/Views/Shared/_Layout.cshtml
@@ -83,10 +83,10 @@
                                 <a class="minimap" href="@Url.Action( "Contact" )" ></a>
 
                                 10 rue Mercoeur<br />
-                                75010 - Paris<br />
+                                75011 - Paris<br />
                                 France<br /><br />
                                 Email: <a href="mailto:contact@invenietis.com">contact@invenietis.com</a><br />
-                                <abbr title="Téléphone">Tel:</abbr> (+33) 1 43 67 88 75
+                                <abbr title="Téléphone">Tel:</abbr> (+33) 1 84 16 19 99
                             </address>
                         </div>
                     </div>
@@ -96,7 +96,7 @@
                         <div class="legal">
                             <img src="@Url.Content("~/Content/images/logo.png")" />
                             <span>
-                                Copyright © 2012 Invenietis. Tous Droits Réservés. 
+                                Copyright © @DateTime.Now.Year Invenietis. Tous Droits Réservés. 
                                 <a href="@Url.Action( "Legal" )"> Mentions légales</a>
                             </span>
                         </div>
