Fix legal pages

--- a/InvenietisPortal/Views/Home/Legal.en.cshtml
+++ b/InvenietisPortal/Views/Home/Legal.en.cshtml
@@ -31,7 +31,7 @@
                             23 rue pelleport<br />
                             75020 Paris<br />
                             FRANCE<br />
-                            P : + 33 1 43 67 88 75
+                            P : (+33) 1 84 16 19 99
                         </address>
                         Limited liability company with a capital of 80 000 euros<br />
                         Code APE/NAF: 6201 Z - Programmation Informatique<br />
@@ -43,12 +43,12 @@
                         <address>
                             <strong>Naitways</strong><br />
                             NAITWAYS SAS<br />
-                            Le Magellan - 7 rue Montespan<br />
-                            91024 Évry CEDEX<br />
+                            10 rue Mercoeur<br />
+                            75011 Paris<br />
                             FRANCE
                         </address>
-                        Simplified joint-stock company with a capital of 25 000 euros<br />
-                        RCS Evry B 508 823 614<br />
+                        Simplified joint-stock company with a capital of 50 000 euros<br />
+                        RCS Paris B 508 823 614<br />
                         <a href="http://naitways.com/">http://naitways.com/</a><br />
                     </div>
                 </div>
