Footer changes and add fonts to the project

--- a/InvenietisPortal/Content/Site.less
+++ b/InvenietisPortal/Content/Site.less
@@ -287,6 +287,13 @@ footer
         padding-left: 15px;
     }
 
+    strong
+    {
+        font-weight: normal;
+        font-size: 20px;
+        font-family: 'conduit_itc_light-regular', "Lucida Sans Unicode", Helvetica, Arial, sans-serif;
+    }
+
     .follow
     {
         width: 196px;
