Add CK-MultiPlan pages

--- a/InvenietisPortal/Views/Shared/_Layout.en.cshtml
+++ b/InvenietisPortal/Views/Shared/_Layout.en.cshtml
@@ -56,6 +56,7 @@
                         <ul>
                             <li><a href="https://get-package.com" target="_blank">Get-Package</a></li>
                             <li><a href="http://civikey.fr" target="_blank">CiviKey</a></li>
+                            <li><a href="@Url.Action( "CKMultiPlan" )">CK-MultiPlan</a></li>
                             @if( ViewContext.RouteData.Values["culture"].ToString() != "en" )
                             {
                                 <li><a href="@Url.Action( "Cuke" )">Cuke</a></li>
