--- a/InvenietisPortal/Content/Site.less
+++ b/InvenietisPortal/Content/Site.less
@@ -194,7 +194,12 @@ header .title
 section
 {
     padding: 50px 0;
-
+    h1
+    {
+        margin-top: 0;
+        margin-bottom: 0;
+        font-family: 'conduit_itc_light-regular',"Lucida Sans Unicode", Helvetica, Arial, sans-serif;
+    }
     h2
     {
         text-align: center;
@@ -202,6 +207,12 @@ section
         margin-bottom: 15px;
         font-family: 'conduit_itc_light-regular',"Lucida Sans Unicode", Helvetica, Arial, sans-serif;
         font-size: 40px;
+    }
+    h3
+    {
+        margin-top: 0;
+        margin-bottom: 15px;
+        font-family: 'conduit_itc_light-regular',"Lucida Sans Unicode", Helvetica, Arial, sans-serif;
     }
 
     .text
