Add new CK-MultiPlan page

--- a/InvenietisPortal/Views/Shared/_Layout.en.cshtml
+++ b/InvenietisPortal/Views/Shared/_Layout.en.cshtml
@@ -10,7 +10,10 @@
     <link href="@Url.Content("~/Content/Site.less")" rel="stylesheet">
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
-    <script type="text/javascript" charset="utf-8" src="@Url.Content("~/Scripts/jquery-1.8.2.min.js")"></script>
+    <script type="text/javascript" charset="utf-8" src="@Url.Content("~/Scripts/jquery-2.1.1.min.js")"></script>
+    <script type="text/javascript" charset="utf-8" src="@Url.Content( "~/Scripts/jquery.unobtrusive-ajax.min.js" )"></script>
+    <script type="text/javascript" charset="utf-8" src="@Url.Content( "~/Scripts/jquery.validate.min.js" )"></script>
+    <script type="text/javascript" charset="utf-8" src="@Url.Content( "~/Scripts/jquery.validate.unobtrusive.min.js" )"></script>
     <script type="text/javascript" charset="utf-8" src="@Url.Content("~/Scripts/bootstrap.min.js")"></script>
     <title>@ViewBag.Title</title>
     @Html.Partial( "_GoogleTag" )
