--- a/InvenietisPortal/Views/Home/CKMultiPlan.fr.cshtml
+++ b/InvenietisPortal/Views/Home/CKMultiPlan.fr.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@model InvPortal.Models.SupportEmailViewModel
+@{
     Layout = "~/Views/Shared/_Layout.fr.cshtml";
     ViewBag.Title = "Invenietis - CK-MultiPlan - End-user controlled template engine";
     ViewBag.Keywords = "CK-MultiPlan controlled template engine rapports Office";
@@ -7,11 +8,11 @@
 
 @section header
 {
-    <style type="text/css">
-        section.container h2 {
-            text-align: left;
-        }
-    </style>
+<style type="text/css">
+    section.container h2 {
+        text-align: left;
+    }
+</style>
 }
 
 <div class="row-fluid ">
@@ -164,6 +165,36 @@
                     <img src="~/content/images/ck-multiplan/Microsoft-Word-01.png" alt="control">
                     <img src="~/content/images/ck-multiplan/Microsoft-Excel-2013-02.png" alt="control">
                     <img src="~/content/images/ck-multiplan/Adobe-Acrobat.png" alt="control">
+                </div>
+            </div>
+        </section>
+    </div>
+</div>
+
+<div class="row-fluid">
+    <div class="span12 top-bx approche">
+        <section class="container">
+
+            <div class="row-fluid">
+                <div class="span4 hidden-phone" style="text-align:center">
+                    <img src="~/content/images/ck-multiplan/Headphone-Mike.png" alt="control">
+                </div>
+                <div class="span8">
+
+                    <h2>Des questions ?</h2>
+                    <h3 style="margin-bottom: 0;">Vous voulez en savoir plus ?</h3>
+                    <h3>Utilisez le formulaire ci-dessous pour nous contacter.</h3>
+
+                </div>
+            </div>
+            <div class="row-fluid" style="margin-top: 30px">
+                <div class="span8 offset2">
+                    @using (Ajax.BeginForm( "Support", "Home", new { }, new AjaxOptions() { HttpMethod = "POST", UpdateTargetId = "form", InsertionMode = InsertionMode.Replace }, new { @class = "form-horizontal" } ))
+                    {
+                        <div id="form">
+                            @Html.Partial( "_Form.fr", Model )
+                        </div>
+                    }
                 </div>
             </div>
         </section>
