--- a/InvenietisPortal/Views/Shared/_Layout.cshtml
+++ b/InvenietisPortal/Views/Shared/_Layout.cshtml
@@ -10,7 +10,10 @@
     <link href="@Url.Content("~/Content/Site.less")" rel="stylesheet">
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
-    <script type="text/javascript" charset="utf-8" src="@Url.Content("~/Scripts/jquery-1.8.2.min.js")"></script>
+    <script type="text/javascript" charset="utf-8" src="@Url.Content("~/Scripts/jquery-2.1.1.min.js")"></script>
+    <script type="text/javascript" charset="utf-8" src="@Url.Content( "~/Scripts/jquery.unobtrusive-ajax.min.js" )"></script>
+    <script type="text/javascript" charset="utf-8" src="@Url.Content( "~/Scripts/jquery.validate.min.js" )"></script>
+    <script type="text/javascript" charset="utf-8" src="@Url.Content( "~/Scripts/jquery.validate.unobtrusive.min.js" )"></script>
     <script type="text/javascript" charset="utf-8" src="@Url.Content("~/Scripts/bootstrap.min.js")"></script>
     <title>@ViewBag.Title</title>
     @Html.Partial("_GoogleTag")
@@ -80,7 +83,7 @@
                         <div class="pull-right address">
                             <address>
                                 <strong>Invenietis</strong>
-                                <a class="minimap" href="@Url.Action( "Contact" )" ></a>
+                                <a class="minimap" href="@Url.Action( "Contact" )"></a>
 
                                 10 rue Mercoeur<br />
                                 75011 - Paris<br />
@@ -96,7 +99,7 @@
                         <div class="legal">
                             <img src="@Url.Content("~/Content/images/logo.png")" />
                             <span>
-                                Copyright © @DateTime.Now.Year Invenietis. Tous Droits Réservés. 
+                                Copyright © @DateTime.Now.Year Invenietis. Tous Droits Réservés.
                                 <a href="@Url.Action( "Legal" )"> Mentions légales</a>
                             </span>
                         </div>
@@ -107,11 +110,11 @@
     </div>
     @RenderSection( "js", required: false )
     <script type="text/javascript">
-            $(function () {
-               $('.expand-menu').click(function () {
-                   $('.header-links').toggleClass('visible');
-               });
+        $(function () {
+            $('.expand-menu').click(function () {
+                $('.header-links').toggleClass('visible');
             });
+        });
     </script>
     <script type="text/javascript">
         _gaq.push(['_trackPageview']);
