--- a/InvenietisPortal/Views/Home/Legal.fr.cshtml
+++ b/InvenietisPortal/Views/Home/Legal.fr.cshtml
@@ -11,6 +11,9 @@
         {
             text-align: left;
         }
+        .column {
+            min-height: 300px !important;
+        }
     </style>
 }
 
@@ -24,7 +27,7 @@
                     </div>
                 </div>
                 <div class="row-fluid">
-                    <div class="span6 well">
+                    <div class="span6 well column">
                         <h3>Editeur de ce Site&nbsp;:</h3>
                         <address>
                             <strong>Invenietis</strong><br />
@@ -38,7 +41,7 @@
                         RCS Paris B 451 482 822<br />
                         TVA n° FR36 451 482 822<br />
                     </div>
-                    <div class="span6 well">
+                    <div class="span6 well column">
                         <h3>Hébergeur de ce Site&nbsp;:</h3>
                         <address>
                             <strong>Naitways</strong><br />
