--- a/InvenietisPortal/Views/Home/CKMultiPlan.fr.cshtml
+++ b/InvenietisPortal/Views/Home/CKMultiPlan.fr.cshtml
@@ -12,6 +12,11 @@
     section.container h2 {
         text-align: left;
     }
+
+    h2.h3-style {
+        font-size: 24.5px;
+    }
+
 </style>
 }
 
@@ -24,7 +29,7 @@
                 </div>
                 <div class="span8">
                     <h1>CK-MultiPlan</h1>
-                    <h3>End-user controlled template engine</h3>
+                    <h2 class="h3-style">End-user controlled template engine</h2>
 
                     <p>CK-MultiPlan est une manière innovante de créer des rapports Office qui est simple à l’usage pour l’utilisateur et indolore pour le développeur.</p>
 
