--- a/InvenietisPortal/Views/Home/References.fr.cshtml
+++ b/InvenietisPortal/Views/Home/References.fr.cshtml
@@ -1,8 +1,8 @@
 ﻿@{
     Layout = "~/Views/Shared/_Layout.fr.cshtml";
-    ViewBag.Title = "Invenietis - Références";
-    ViewBag.Keywords = "";
-    ViewBag.Description = "";
+    ViewBag.Title = "Invenietis - Nos réalisations";
+    ViewBag.Keywords = "cas, portfolio, réalisations, applications, forfait, back-office";
+    ViewBag.Description = "Nos réalisations : Quelque exemple de solutions développée par Invenietis pour ses clients";
 }
 
 @section header
@@ -25,7 +25,7 @@
                     <img src="~/content/images/references/logo_Cofely.jpg" alt="Cofely">
                 </div>
                 <div class="span8">
-                    <h3>Cofely</h3>
+                    <h2>Cofely</h2>
 
                     <p>Cofely conçoit, met en œuvre et exploite des solutions qui permettent aux entreprises et aux collectivités de mieux utiliser les énergies et de réduire leur impact environnemental.</p>
                     <p>En partenarait avec l'agence <b>Fivetouch</b> et l'agence <b>Babel</b>, Invenietis a réalisé un système de gestion électronique de document et une gestion de contenu versionnée afin d'offrir aux commerciaux une plateforme d'aide à la vente.</p>
@@ -39,7 +39,7 @@
         <section class="container">
             <div class="row-fluid">
                 <div class="span8">
-                    <h3>Groupe ESIEA</h3>
+                    <h2>Groupe ESIEA</h2>
                     <p>Le groupe ESIEA est composé de deux écoles : ESIEA, école d'ingénieur et IN'TECH INFO, école supérieur en ingénierie informatique. </p>
                     <p>Invenietis a développé le portail de candidature des écoles du groupe ainsi que l'extranet de gestion lié.</p>
                     <h4>Inscrivez-vous !</h4>
@@ -64,7 +64,7 @@
                     <img src="~/content/images/references/logo_Orange.jpg" style="width: 200px; height: 200px;" alt="Orange 4G Battle">
                 </div>
                 <div class="span8">
-                    <h3>Orange 4G Battle</h3>
+                    <h2>Orange 4G Battle</h2>
                     <p>4G Battle est un jeu-concours en ligne organisé par <b>Orange</b> et l'agence <b>Rouge</b> à l'occasion du lancement de la 4G en France.</p>
                     <p>Invenietis a développé le portail de participation et de gestion du concours.</p>
                     <p><a target="_blank" href="https://4gbattle.com/">Venez tester la 4G!</a></p>
@@ -79,7 +79,7 @@
         <section class="container">
             <div class="row-fluid">
                 <div class="span8">
-                    <h3>Microsoft Campus Challenge</h3>
+                    <h2>Microsoft Campus Challenge</h2>
 
                     <p>Campus Challenge est un jeu-concours organisé par <b>Microsoft</b> et l'agence <b>Rouge</b> permettant aux étudiants adeptes des réseaux sociaux de gagner une tablette Surface après avoir eu entre leurs mains la tablette durant toute une semaine pour participer au jeu. </p>
                     <p>Invenietis a développé le portail d'inscription et de gestion du concours ainsi qu'une web-application mobile responsive</p>
@@ -100,7 +100,7 @@
                     <img src="~/content/images/references/logo_Microsoft-Campus-Program.png" alt="Microsoft Campus Program">
                 </div>
                 <div class="span8">
-                    <h3>Microsoft Campus Program</h3>
+                    <h2>Microsoft Campus Program</h2>
                     <p>
                         Programme de partenariat Microsoft pour les établissements d'enseignement supérieur : offres de PC et tablettes à prix réduits sont réservés aux étudiants.
                     </p>
@@ -118,7 +118,7 @@
         <section class="container">
             <div class="row-fluid">
                 <div class="span8">
-                    <h3>Canal PCR</h3>
+                    <h2>Canal PCR</h2>
 
                     <p>Canal PCR permet aux cabinets de radiologie de piloter facilement leur dossier de radioprotection.</p>
                     <p>Nous développons l'extranet permettant la gestion des dossiers.</p>
@@ -139,7 +139,7 @@
                     <img src="~/content/images/references/logo_AirCrewWorld.png" alt="Air Crew World">
                 </div>
                 <div class="span8">
-                    <h3>Air Crew World</h3>
+                    <h2>Air Crew World</h2>
 
                     <p>Air Crew World est un réseau social qui permet aux personnes voyageant dans le monde entier d'être mis en relation (personnels navigants, hommes et femmes d'affaire). </p>
                     <p>Du conseil à la réalisation technique, nous avons entièrement développé la plateforme web du service.</p>
@@ -155,7 +155,7 @@
         <section class="container">
             <div class="row-fluid">
                 <div class="span8">
-                    <h3>Clef Verte</h3>
+                    <h2>Clef Verte</h2>
 
                     <p>Clef Verte est un programme de la Fondation pour l'Education à l'Environnement en Europe. Premier label environnemental international pour l'hébergement touristique écologique</p>
                     <p>Nous avons accompagné (et continuons de le faire!) leur transition vers le tout informatique en réalisant l'extranet de candidature et de gestion des labellisations.</p>
@@ -209,7 +209,7 @@
                     <img src="~/content/images/references/logo_CIO.png" alt="Olympic Journey">
                 </div>
                 <div class="span8">
-                    <h3>Le voyage Olympique</h3>
+                    <h2>Le voyage Olympique</h2>
 
                     <p>Le voyage Olympique est un site web documentaire qui retrace l'histoire des jeux olympique. </p>
                     <p>En partenariat avec l'agence <b>Lumini</b>, nous avons réalisé le back office proposant une gestion des contenus arborescente et multilingue (images / vidéos / applications flash / contenu des articles).</p>
@@ -224,7 +224,7 @@
         <section class="container">
             <div class="row-fluid">
                 <div class="span8">
-                    <h3>Agence Nationale pour le Service à la Personne</h3>
+                    <h2>Agence Nationale pour le Service à la Personne</h2>
 
                     <p>L'Agence Nationale pour le Service à la Personne est un établissement public chargé de promouvoir le développement et la qualité du secteur des services à la personne en France. </p>
                     <p>Invenietis a développé son portail web entre 2008 et 2013 qui comprenait une grosse gestion documentaire et de contenu ainsi qu'un portail communautaire et un forum. (l'agence a depuis été fermée).</p>
@@ -244,7 +244,7 @@
                     <img src="~/content/images/references/logo_Naitways.png" alt="Naitways">
                 </div>
                 <div class="span8">
-                    <h3>Naitways</h3>
+                    <h2>Naitways</h2>
 
                     <p>Naitways propose des solutions réseau, des solutions d’hébergement infogéré et des solutions de Cloud Computing privé managées. </p>
                     <p>Ils nous ont fait confiance pour développer le logiciel en ligne qui leur permet aujourd'hui de suivre l'avancement de leurs projets et leur faire gagner un temps précieux.</p>
