update invenietis technical center address + remove Cuke links

--- a/InvenietisPortal/Views/Home/Contact.fr.cshtml
+++ b/InvenietisPortal/Views/Home/Contact.fr.cshtml
@@ -39,8 +39,7 @@
                         <strong class="lead">Centre technique :</strong><br /><br />
                         <address>
                             <strong>Société Invenietis</strong><br />
-                            10 rue Mercoeur<br>
-                            Batiment A - 6e étage<br>
+                            28 rue Godefroy Cavaignac<br>
                             75011 - Paris<br>
                             France
                         </address>
@@ -63,12 +62,11 @@
             <address>
                 <img src="/Content/images/marcker.png" alt="logo" />
                 <strong>Invenietis - Centre technique</strong><br />
-                10 rue Mercoeur<br>
-                Batiment A - 6e étage<br>
+                28 rue Godefroy Cavaignac<br>
                 75011 - Paris<br>
                 France
             </address>
-            <a target="_blank" href="https://maps.google.fr/maps?q=10+Rue+Merc%C5%93ur,+Paris&hl=fr&ie=UTF8&sll=48.863091,2.404289&sspn=0.006882,0.016512&oq=10&t=h&gl=fr&hnear=10+Rue+Merc%C5%93ur,+75011+Paris,+%C3%8Ele-de-France&z=17">Voir sur Google Map</a>
+            <a target="_blank" href="https://www.google.fr/maps/place/28+Rue+Godefroy+Cavaignac,+75011+Paris/@48.8557197,2.3811039,17z/data=!4m7!1m4!3m3!1s0x47e66df62b72e369:0xe95d907aa3d84d46!2s28+Rue+Godefroy+Cavaignac,+75011+Paris!3b1!3m1!1s0x47e66df62b72e369:0xe95d907aa3d84d46">Voir sur Google Map</a>
         </div>
     </div>
     <div id="infomapHQ">
@@ -153,7 +151,7 @@
             });
             bounds.extend(markerTech.position);
             var markerHQ = new google.maps.Marker({
-                position: new google.maps.LatLng(48.863282, 2.404191),
+                position: new google.maps.LatLng(48.85571969999999, 2.381103899999971),
                 title: 'Invenietis - Siège Social',
                 zoomControl: true,
                 map: map,
