--- a/InvenietisPortal/Views/Shared/_Layout.en.cshtml
+++ b/InvenietisPortal/Views/Shared/_Layout.en.cshtml
@@ -61,10 +61,6 @@
                             <li><a href="https://get-package.com" target="_blank">Get-Package</a></li>
                             <li><a href="http://civikey.fr" target="_blank">CiviKey</a></li>
                             <li><a href="@Url.Action( "CKMultiPlan" )">CK-MultiPlan</a></li>
-                            @if( ViewContext.RouteData.Values["culture"].ToString() != "en" )
-                            {
-                                <li><a href="@Url.Action( "Cuke" )">Cuke</a></li>
-                            }
                         </ul>
                         <strong>Languages</strong>
                         <ul>
@@ -87,8 +83,8 @@
                                 <strong>Invenietis</strong>
                                 <a class="minimap" href="@Url.Action( "Contact" )"></a>
 
-                                10 rue Mercoeur<br />
-                                75011 - Paris<br />
+                                28 rue Godefroy Cavaignac<br>
+                                75011 - Paris<br>
                                 France<br /><br />
                                 Mail: <a href="mailto:contact@invenietis.com">contact@invenietis.com</a><br />
                                 <abbr title="Phone number">P:</abbr> (+33) 1 84 16 19 99
