--- a/InvenietisPortal/Views/Shared/_Layout.cshtml
+++ b/InvenietisPortal/Views/Shared/_Layout.cshtml
@@ -59,10 +59,6 @@
                         <ul>
                             <li><a href="https://get-package.com" target="_blank">Get-Package</a></li>
                             <li><a href="http://civikey.fr" target="_blank">CiviKey</a></li>
-                            @if( ViewContext.RouteData.Values["culture"].ToString() != "en" )
-                            {
-                                <li><a href="@Url.Action( "Cuke" )">Cuke</a></li>
-                            }
                         </ul>
                         <strong>Langues</strong>
                         <ul>
@@ -85,8 +81,8 @@
                                 <strong>Invenietis</strong>
                                 <a class="minimap" href="@Url.Action( "Contact" )"></a>
 
-                                10 rue Mercoeur<br />
-                                75011 - Paris<br />
+                                28 rue Godefroy Cavaignac<br>
+                                75011 - Paris<br>
                                 France<br /><br />
                                 Email: <a href="mailto:contact@invenietis.com">contact@invenietis.com</a><br />
                                 <abbr title="Téléphone">Tel:</abbr> (+33) 1 84 16 19 99
