Fix @ special character interpretation by Razor

--- a/InvenietisPortal/Views/Home/Contact.en.cshtml
+++ b/InvenietisPortal/Views/Home/Contact.en.cshtml
@@ -66,7 +66,7 @@
                 75011 - Paris<br>
                 France
             </address>
-            <a target="_blank" href="https://www.google.fr/maps/place/28+Rue+Godefroy+Cavaignac,+75011+Paris/@48.8557197,2.3811039,17z/data=!4m7!1m4!3m3!1s0x47e66df62b72e369:0xe95d907aa3d84d46!2s28+Rue+Godefroy+Cavaignac,+75011+Paris!3b1!3m1!1s0x47e66df62b72e369:0xe95d907aa3d84d46">Voir sur Google Map</a>
+            <a target="_blank" href="https://www.google.fr/maps/place/28+Rue+Godefroy+Cavaignac,+75011+Paris/48.8557197,2.3811039,17z/data=!4m7!1m4!3m3!1s0x47e66df62b72e369:0xe95d907aa3d84d46!2s28+Rue+Godefroy+Cavaignac,+75011+Paris!3b1!3m1!1s0x47e66df62b72e369:0xe95d907aa3d84d46">Voir sur Google Map</a>
         </div>
     </div>
     <div id="infomapHQ">
