add syntec label

--- a/InvenietisPortal/Content/Site.less
+++ b/InvenietisPortal/Content/Site.less
@@ -307,7 +307,7 @@ footer {
     img.mslogo {
         width: 250px;
         display: block;
-        margin: 20px auto 0 auto;
+        margin: 20px auto 5px auto;
     }
 
     address {
