--- a/InvenietisPortal/Views/Shared/_Layout.en.cshtml
+++ b/InvenietisPortal/Views/Shared/_Layout.en.cshtml
@@ -76,6 +76,8 @@
                             <a class="facebook" href="https://www.facebook.com/Invenietis" target="_blank"></a>
                         </div>
                         <img class="mslogo" src="@Url.Content("~/Content/images/microsoft_tw_en.png")" />
+                        <img src="@Url.Content("~/Content/images/syntec.png")" />
+
                     </div>
                     <div class="span3">
                         <div class="pull-right address">
