Change extension of ESIEA logo

--- a/InvenietisPortal/Views/Home/References.en.cshtml
+++ b/InvenietisPortal/Views/Home/References.en.cshtml
@@ -42,7 +42,7 @@
 
                 </div>
                 <div class="span4 hidden-phone" style="text-align:center">
-                    <img src="~/content/images/references/logo_ESIEA-gde-ecole.gif" alt="Groupe ESIEA">
+                    <img src="~/content/images/references/logo_ESIEA-gde-ecole.png" alt="Groupe ESIEA">
                 </div>
             </div>
         </section>
