--- a/Invenietis.Back/Views/_ViewImports.cshtml
+++ b/Invenietis.Back/Views/_ViewImports.cshtml
@@ -1,3 +1,5 @@
 ﻿@using System.Globalization
+@using Invenietis.Common.Cultures
 
 @addTagHelper "*, Microsoft.AspNet.Mvc.TagHelpers"
+@inject CultureProvider CultureProvider
